Add src penne image

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 <div class="recipe-section">
     <h2>Finished Dish</h2>
-    <img src="" alt="Finished Dish" class="recipe-image">
+    <img src="penisvodka.avif" alt="Finished Dish" class="recipe-image">
 </div>
 
 
